Fixed Sider overflow-y

--- a/client/components/CollapsibleSiderLayout/index.less
+++ b/client/components/CollapsibleSiderLayout/index.less
@@ -190,7 +190,9 @@
 .ant-layout-sider .ant-menu-dark.ant-menu-vertical .ant-menu-item-group-title {
   color: #666;
 }
-
+.ant-layout-sider-children {
+  overflow-y: auto;
+}
 .left-sider-panel {
   min-width: 280px;
   overflow: hidden;
